# subs-manager-ai

./: .env.example  .gitignore  FIXES.md  Makefile  PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
api/: .coverage  .dockerignore  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20260504_0001_initial.py
api/app/: main.py  models.py  schemas.py
api/app/api/: jobs.py  library.py  movies.py  settings.py  subs.py  video_files.py
api/app/core/: config.py  db.py  policy.py  safe_fs.py  srt_validator.py
api/app/scanner/: langdetect_op.py  naming.py  probe.py  scanner.py  sub_name_parser.py  walker.py
api/app/workers/: mkv.py  queue.py  transcribe.py  translate.py  translate_embedded.py
api/tests/: conftest.py  test_config.py  test_db.py  test_enqueue_async.py  test_integration.py  test_jobs_api.py  test_langdetect_op.py  test_library_api.py  test_mkv.py  test_models.py  test_movies_api.py  test_naming.py  test_policy.py  test_probe.py  test_safe_fs.py  test_scanner.py  test_settings_api.py  test_srt_validator.py  test_sub_name_parser.py  test_subs_api.py  test_transcribe.py  test_transcribe_api.py  test_translate.py  test_translate_api.py  test_translate_embedded.py  test_video_files_api.py  test_walker.py
web/: Dockerfile.prod  index.html  nginx.conf.template  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts
web/src/components/: EditSubModal.tsx  JobStatus.tsx  LangBadge.tsx  MultiSelectFilter.tsx  UploadModal.tsx
web/src/pages/: Jobs.tsx  (+2 more)
