[project]
name = "subs-manager-api"
version = "0.1.0"
description = "Subtitle manager API + worker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "arq>=0.26",
    "redis>=5.2",
    "python-multipart>=0.0.20",
    "pysrt>=1.1.2",
    "langdetect>=1.0.9",
    "watchdog>=5.0",
    "pymediainfo>=6.1",
    "faster-whisper>=1.0",
    "xxhash>=3.5",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "B008",  # FastAPI Depends() in defaults is idiomatic
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
